HTMLDecoder: fix missing span on subsequent lines

Issue:
When saving output as HTML, for multiple lines with the same style, only the first line had a `<span>`, while subsequent lines lack styling.

Change:
For the first character, if there is no style change, apply the stored `_style`.

BUG: 509784